# picasu

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  deny.toml  justfile
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  docs-check.yml  release.yml
.opencode/: opencode.json
.opencode/plugin/: auto-check.ts
.plan/: TODO_ARCHIVE.md  backend-unit-tests.md  clippy-unwrap-cleanup.md  code-module-review.md  frontend-rating-widget.md  move-fixtures-to-xtask.md  per-dimension-version-counters.md  pre01.md  schema.json  seed-based-deterministic-scheduler.md  selective-view-cache-invalidation.md  ui-refinement.md
.plan/tasks/: android-app.md  assign-album-file-move-verification.md  backend-integration-tests.md  cargo-geiger-reports.md  deferred-tooling.md  docker-deployment.md  documentation-system.md  dsl-scenarios-small.md  e2e-regression-gaps.md  (+28 more)
backend/: Cargo.toml  build.rs
docs/: BUILD_INSTALLER.md  CONFIG.md  FRONTEND.md  design.md  openapi-generator.md  playwright_generator.md  scenario-dsl.md  test-strategy.md
frontend/: package-lock.json  package.json
gallery-backend/: Cargo.toml  openapi.json
gallery-frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
gallery-site/: package-lock.json  package.json
utils/snapfab/: Cargo.toml
utils/snapfab/src/: lib.rs  main.rs  test_image.rs
xtask/: Cargo.toml
xtask/data/: schema.json
xtask/src/: generator.rs  main.rs  openapi.rs  plan.rs  test_image.rs
xtask/src/fixtures/: discover.rs  wait.rs
(+229 files in other folders)
