[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
image = "0.25.10"
rocket = { version = "0.5.1", features = ["json"] }
