[package]
name = "snapfab"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "snapfab"
path = "src/lib.rs"

[[bin]]
name = "snapfab"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.10"
clap = { version = "4", features = ["derive"] }
rayon = "1"
little_exif = "0.6"
iptc = "0.3"
